Perkin-UAT/force-app/main/default/objects/SOW_Request__c/SOW_Request__c.object-meta.xml
<CustomObject>
    <description>Informatics</description>
    <label>SOW Request</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>