Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Amount_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Effort__c</fullName>
    <description>Days of effort is the number of days that the service consultant estimate for the project.  This should reflect what we sell (number of days sold).  The amount is in dollars.  So if we sold 100 days at $1700/day, the days of effort would be 100 and the amount would be 170,000 (in dollars).</description>
    <label>Amount of Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>