Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Comment_on_Scope__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Scope__c</fullName>
    <label>Comment on Scope</label>
    <type>TextArea</type>
</CustomField>