Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Comment_on_SOW__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_SOW__c</fullName>
    <label>Comment on SOW</label>
    <type>TextArea</type>
</CustomField>