Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Customer_Name_INF__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_INF__c</fullName>
    <formula>Opportunity_Name_INF__r.Account.Name</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>