Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Date_of_1st_SOW_Draft__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_SOW_Draft__c</fullName>
    <label>Date of 1st SOW Draft</label>
    <type>Date</type>
</CustomField>