Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Est_Duration__c.field-meta.xml
<CustomField>
    <fullName>Est_Duration__c</fullName>
    <description>Requested by Paul Weber</description>
    <inlineHelpText>Allows the OA estimated completion date is set more accurately. Enter the weeks expected, with effort, staffing, utilization, delays and startup time all factored in.  This is used for revrev forecasting, and project portfolio management.</inlineHelpText>
    <label>Est Duration</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>