Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Initial_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initial_Project_Owner__c</fullName>
    <description>Requested by Paul Weber. We can try using global picklists to make the values dynamic.</description>
    <inlineHelpText>A name of someone who will own the project when we turn it over from Edgar to whomever.</inlineHelpText>
    <label>Initial Project Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anil</fullName>
            </value>
            <value>
                <fullName>Doug</fullName>
            </value>
            <value>
                <fullName>Enko</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>