Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Notes_INF__c.field-meta.xml
<CustomField>
    <fullName>Notes_INF__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>