Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Product_Category_INF__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_INF__c</fullName>
    <label>SOW Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics &amp; Visual - Clinical</fullName>
            </value>
            <value>
                <fullName>Analytics &amp; Visual - R&amp;D</fullName>
            </value>
            <value>
                <fullName>Attivio</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>Enterprise R&amp;D</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>INF - Other</fullName>
            </value>
            <value>
                <fullName>QA/QC</fullName>
            </value>
            <value>
                <fullName>Signals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>