Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Requested by Paul Weber and only Service Representatives can edit this field. All other profiles can view this field.</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Product Line 1</fullName>
            </value>
            <value>
                <fullName>Product Line 2</fullName>
            </value>
            <value>
                <fullName>Product Line 3</fullName>
            </value>
            <value>
                <fullName>Product Line 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>