Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Project_ID_INF__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_INF__c</fullName>
    <description>Will get auto populated when Order booked</description>
    <formula>Opportunity_Name_INF__r.Project_ID_INF__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>