Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Request_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_INF__c</fullName>
    <formula>TODAY()</formula>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>