Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/Request_Type_INF__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_INF__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scope project and SOW</fullName>
                <default>true</default>
                <label>Scope project and SOW</label>
            </value>
            <value>
                <fullName>Scope for budget purposes (no SOW)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>