Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/SME_Assigned_INF__c.field-meta.xml
<CustomField>
    <fullName>SME_Assigned_INF__c</fullName>
    <label>SME Assigned</label>
    <length>40</length>
    <type>Text</type>
</CustomField>