Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/SOW_Expiration_INF__c.field-meta.xml
<CustomField>
    <fullName>SOW_Expiration_INF__c</fullName>
    <label>SOW Expiration</label>
    <type>Date</type>
</CustomField>