Perkin-UAT/force-app/main/default/objects/SOW_Request__c/fields/SOW_Owner__c.field-meta.xml
<CustomField>
    <fullName>SOW_Owner__c</fullName>
    <description>Manager, or Owner of seeing SOW to completion.  May manage necessary resources needed</description>
    <label>SOW Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>